--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -4,6 +4,38 @@
     <title th:text="${title}"></title>
     <meta th:attr="content=${title}" name="title">
     <meta th:attr="content=${description}" name="description">
+
+    <meta property="og:title" th:attr="content=${title}"/>
+    <meta property="og:description" th:attr="content=${description}"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" th:attr="content=${'https://www.frety.me/chord/' + chord.id}" />
+    <meta property="og:site_name" content="Frety - 프렛티"/>
+    <meta property="og:locale" content="ko_KR"/>
+    <meta property="og:image" content="https://www.frety.me/guitar.png"/>
+    <meta property="og:image:width" content="400"/>
+    <meta property="og:image:height" content="200"/>
+    <meta property="og:image:alt" content="frety_chord_image"/>
+
+    <link rel="canonical" th:href="'https://www.frety.me/chord/' + ${chord.id}" />
+    <link rel="alternate" th:href="'https://www.frety.me/chord/' + ${chord.id}" hrefLang="ko_KR"/>
+
+    <!--JSON-LD-->
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "website",
+            "name": "[[${title}]]",
+            "description": "[[${description}]]",
+            "url": "https://www.frety.me/chord/[[${chord.id}]]",
+            "image": {
+                "@type": "websiteImage",
+                "url": "https://www.frety.me/guitar.png",
+                "width": 400,
+                "height": 200,
+                "alt": "frety_chord_image"
+            }
+        }
+    </script>
 </head>
 
 <body>
